--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- HEADER  -->
-     <header class="header">
+    <header class="header">
       <div class="container nav-head">
         <nav class="header-nav">
           <a href="" class="header-logo link">
@@ -33,7 +33,9 @@
               <a href="./index.html" class="header-link link">Студия</a>
             </li>
             <li class="header-item">
-              <a href="./portfolio.html" class="header-link link">Портфолио</a>
+              <a href="./portfolio.html" class="header-link current link"
+                >Портфолио</a
+              >
             </li>
             <li class="header-item">
               <a href="" class="header-link link">Контакты</a>
@@ -42,9 +44,9 @@
         </nav>
         <ul class="header-contact list">
           <li>
-            <a href="" class="header-mail link">
+            <a href="mailto:info@devstudio.com" class="header-mail link">
               <span class="header-contact-mail">
-                <svg class=" " width="20" height="20">
+                <svg class=" " width="16" height="12">
                   <use href="./images/symbol-defs.svg#icon-meil"></use>
                 </svg>
               </span>
@@ -52,13 +54,13 @@
             >
           </li>
           <li>
-            <a href="" class="header-tel link"
-              >
+            <a href="tel:+380961111111" class="header-tel link">
               <span class="header-contact-tel">
-                <svg class=" " width="20" height="20">
+                <svg class=" " width="16" height="12">
                   <use href="./images/symbol-defs.svg#icon-tel"></use>
                 </svg>
-                +38 096 111 11 11</a
+              </span>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -89,108 +91,171 @@
           <!-- WORKS -->
           <ul class="works-list list">
             <li class="works-item">
-              <img
-                src="./images/project1.jpg"
-                alt="Ноутбук с сайтом"
-                width="370"
-                height="295"
-              />
+              <div class="works-top-warp">
+                <img
+                  src="./images/project1.jpg"
+                  alt="Ноутбук с сайтом"
+                  width="370"
+                  height="295"
+                />
+                <p class="works-top-text">
+                  Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице
+                </p>
+              </div>
               <div class="work-card">
                 <h3 class="works-title">Технокряк</h3>
                 <p class="works-text">Веб-сайт</p>
               </div>
             </li>
             <li class="works-item">
-              <img
-                src="./images/project2.jpg"
-                alt="Постер с двумя баскетболистами"
-                width="370"
-                height="295"
-              />
+              <div class="works-top-warp">
+                <img
+                  src="./images/project2.jpg"
+                  alt="Постер с двумя баскетболистами"
+                  width="370"
+                  height="295"
+                />
+                <p class="works-top-text">
+                  Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице
+                </p>
+              </div>
               <div class="work-card">
                 <h3 class="works-title">Постер New Orlean vs Golden Star</h3>
                 <p class="works-text">Дизайн</p>
               </div>
             </li>
             <li class="works-item">
-              <img
-                src="./images/project3.jpg"
-                alt="Эмблема с рыбой"
-                width="370"
-                height="295"
-              />
+              <div class="works-top-warp">
+                <img
+                  src="./images/project3.jpg"
+                  alt="Эмблема с рыбой"
+                  width="370"
+                  height="295"
+                />
+                <p class="works-top-text">
+                  Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице
+                </p>
+              </div>
               <div class="work-card">
                 <h3 class="works-title">Ресторан Seafood</h3>
                 <p class="works-text">Приложение</p>
               </div>
             </li>
             <li class="works-item">
-              <img
-                src="./images/project4.jpg"
-                alt="Наушники"
-                width="370"
-                height="295"
-              />
+              <div class="works-top-warp">
+                <img
+                  src="./images/project4.jpg"
+                  alt="Наушники"
+                  width="370"
+                  height="295"
+                />
+                <p class="works-top-text">
+                  Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице
+                </p>
+              </div>
               <div class="work-card">
                 <h3 class="works-title">Проект Prime</h3>
                 <p class="works-text">Маркетинг</p>
               </div>
             </li>
             <li class="works-item">
-              <img
-                src="./images/project5.jpg"
-                alt="Две коробки"
-                width="370"
-                height="295"
-              />
+              <div class="works-top-warp">
+                <img
+                  src="./images/project5.jpg"
+                  alt="Две коробки"
+                  width="370"
+                  height="295"
+                />
+                <p class="works-top-text">
+                  Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице
+                </p>
+              </div>
               <div class="work-card">
                 <h3 class="works-title">Проект Boxes</h3>
                 <p class="works-text">Приложение</p>
               </div>
             </li>
             <li class="works-item">
-              <img
-                src="./images/project6.jpg"
-                alt="Черный монитор"
-                width="370"
-                height="295"
-              />
+              <div class="works-top-warp">
+                <img
+                  src="./images/project6.jpg"
+                  alt="Черный монитор"
+                  width="370"
+                  height="295"
+                />
+                <p class="works-top-text">
+                  Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице
+                </p>
+              </div>
               <div class="work-card">
                 <h3 class="works-title">Inspiration has no Borders</h3>
                 <p class="works-text">Веб-сайт</p>
               </div>
             </li>
             <li class="works-item">
-              <img
-                src="./images/project7.jpg"
-                alt="Открытая книга"
-                width="370"
-                height="295"
-              />
+              <div class="works-top-warp">
+                <img
+                  src="./images/project7.jpg"
+                  alt="Открытая книга"
+                  width="370"
+                  height="295"
+                />
+                <p class="works-top-text">
+                  Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице
+                </p>
+              </div>
               <div class="work-card">
                 <h3 class="works-title">Издание Limited Edition</h3>
                 <p class="works-text">Дизайн</p>
               </div>
             </li>
             <li class="works-item">
-              <img
-                src="./images/project8.jpg"
-                alt="Белая лейба"
-                width="370"
-                height="295"
-              />
+              <div class="works-top-warp">
+                <img
+                  src="./images/project8.jpg"
+                  alt="Белая лейба"
+                  width="370"
+                  height="295"
+                />
+                <p class="works-top-text">
+                  Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице
+                </p>
+              </div>
               <div class="work-card">
                 <h3 class="works-title">Проект LAB</h3>
                 <p class="works-text">Маркетинг</p>
               </div>
             </li>
             <li class="works-item">
-              <img
-                src="./images/project9.jpg"
-                alt="Ноутбук и две руки"
-                width="370"
-                height="295"
-              />
+              <div class="works-top-warp">
+                <img
+                  src="./images/project9.jpg"
+                  alt="Ноутбук и две руки"
+                  width="370"
+                  height="295"
+                />
+                <p class="works-top-text">
+                  Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице
+                </p>
+              </div>
               <div class="work-card">
                 <h3 class="works-title">Growing Business</h3>
                 <p class="works-text">Приложение</p>
